style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  padding-left: 200px;
  font-family: "Lato", sans-serif;
  font-family: "Montserrat", sans-serif;
  font-family: "Roboto Slab", serif;
}

:root {
  --primary: #d3423d;
  --accent: #0e0e0e;
  --accent-2: #3a3939;
  --pop: #e43434;
  --bg-color: #444444;
}

body {
  background-color: var(--bg-color);
}

.navigation {
  margin: 0;
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.sidebar {
  z-index: 1;
  transform: translateX(-200px);
  border-right: 2px solid var(--accent);
  box-shadow: rgba(0, 0, 0, 0.25) 2px 0px 3px;
  background-color: var(--primary);
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 200px;
  height: 100vh;
  position: fixed;
  text-align: center;
  padding-top: 25px;
}

.profile {
  color: var(--accent);
}

.profile h6 {
  color: var(--accent-2);
  font-size: 8px;
}

.image-container {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--secondary-color);
  border-radius: 50%;
  height: 105px;
  width: 105px;
  margin: 0 auto;
}

.sidebar img {
  width: 100px;
  height: 100px;
  object-fit: cover;
  border-radius: 50%;
}

.links li {
  list-style-type: none;
  margin: 20px 0;
}

.links li a {
  text-decoration: none;
  color: var(--accent);
  padding: 20px 0;
}

.nav-link {
  color: black;
}

.nav-link:hover {
  color: black;
}

.social-links img {
  width: 20px;
  height: 20px;
  margin: 10px;
}

.hero {
  color: var(--secondary-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: auto;
  height: 100vh;
}

.introduction {
  padding: 10px;
}

.introduction h1 {
  font-size: 3.4vw;
}
#changingText {
  color: var(--primary);
  border-right: 1px solid black;
  animation: cursoranim 1s linear infinite;
}

@keyframes cursoranim {
  50% {
    border-right: 1px solid rgba(0, 0, 0, 0);
  }
}

#about {
  margin: 0 auto;
  width: 80%;
  height: auto;
  color: var(--secondary-color);
}

#about h1 {
  color: var(--primary-color);
  font-size: 3vw;
  margin-bottom: 20px;
}

#about p {
  margin: 0px;
  font-size: 1.5vw;
}

#about h2 {
  font-size: 2.5vw;
}

#about .image-container-about {
  margin: 0px;
  width: 20vw;
}

#about img {
  margin: 0px 8px 0px 0px;
  width: 20vw;
  float: left;
}

.about__cta {
  display: flex;
  width: fit-content;
  margin: 0 auto;
}

.about__cta button {
  margin: 0 1.2vw;
}

#skills {
  margin: 0 auto;
  width: 80%;
  height: auto;
}

#skills h1 {
  color: var(--primary-color);
  font-size: 3vw;
  margin-bottom: 20px;
  padding-top: 80px;
}

#skills div {
  display: flex;
  align-items: space-between;
  justify-content: space-around;
  width: 50%;
  margin: 0 auto;
}

#projects {
  margin: 0 auto;
  width: 80%;
  height: auto;
}

.card {
  width: 15vw;
}

#projects h1 {
  color: var(--primary-color);
  font-size: 3vw;
  margin-bottom: 20px;
  padding-top: 80px;
}
#projects button {
  background-color: transparent;
  border: none;
  margin: 20px;
}

.projects__project-cards {
  display: flex;
  justify-content: center;
}
#contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
  width: 80%;
  color: var(--secondary-color);
  height: 600px;
}

#contact h1 {
  color: var(--primary-color);
  font-size: 3vw;
  margin-bottom: 20px;
  padding-top: 80px;
}

#contact form {
  width: 40vw;
  display: flex;
  flex-direction: column;
}

#contact form button {
  margin: 0 auto;
}

.input-section {
  margin: 10px 0px;
}

#contact form input {
  border: 1px solid var(--accent);
  background-color: white;
  outline: none;
  width: 40vw;
  font-family: "Montserrat", sans-serif;
}

#contact form textarea {
  border: 1px solid var(--accent);
  resize: none;
  background-color: white;
  outline: none;
  width: 40vw;
  height: 100px;
  padding: 5px;
  font-family: "Montserrat", sans-serif;
}

footer {
  padding-left: 200px;
  transform: translateX(-200px);
  width: 100vw;
  border-top: 2px solid var(--accent);
  height: 200px;
  background-color: var(--accent-2);
  padding-top: 20px;
  display: flex;
  align-items: center;
}

.footer__content {
  margin: auto;
  width: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

footer h1 {
  padding: 5px 0px;
  color: var(--primary);
}

footer p {
  padding: 5px 0px;
  color: var(--secondary-color);
  width: 500px;
}

.hidden {
  display: none;
}

#modal-window {
  position: absolute;
  display: flex;
  align-items: center;
  transform: translateY(-1400px);
  width: 100vw;
  height: 100vh;
}

#modal-window__content {
  border: 2px solid var(--accent);
  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 4px 2px;
  margin-left: calc(200px + (100vw - 200px - 40vw) / 2);
  color: var(--accent);
  padding: 20px;
  border-radius: 20px;
  width: 40vw;
  height: 38vw;
  background-color: var(--primary);
}

#modal-window__content h1 {
  font-size: 2.5vw;
  color: var(--accent);
}

#modal-window__content h2 {
  font-size: 1.8vw;
}

#modal-window__content p {
  font-size: 1.2vw;
  color: black;
}

#content__button {
  color: var(--accent);
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 700;
  margin: 0.5vw auto;
  font-size: 1.2vw;
  width: 8vw;
  height: 3vw;
  border-radius: 999px;
  background-color: var(--bg-color);
  box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 5px;
}

button {
  border: 1px solid var(--accent);
}
.navbar-expand-lg {
  display: none;
}

@media screen and (max-width: 750px) {
  .navbar-expand-lg {
    display: inline;
    width: 100vw;
    position: fixed;
    background-color: var(--primary);
  }
  .card {
    width: 8rem;
  }
  .collapse-nav {
    display: block;
    transform: translateX(-82px);
  }
  .hero h1 {
    font-size: 3.5vw;
  }

  html,
  body {
    max-width: 100%;
    overflow-x: hidden;
  }
  #about {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 20px;
    align-items: center;
    text-align: center;
    height: auto;
  }
  #about h1 {
    font-size: 5vw;
    margin: 0px;
  }

  #about h2 {
    font-size: 4vw;
    margin: 0px;
  }

  #about img {
    margin-right: 0px;
    width: fit-content;
    width: 70vw;
  }
  #about .image-container-about {
    width: fit-content;
  }
  #about p {
    width: 100%;
    text-align: left;
    font-size: 2.5vw;
    margin: 0px;
  }

  #about h2 {
    padding: 0px;
    margin: 0px;
  }
  .sidebar {
    display: none;
  }

  #skills {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #skills img {
    margin: 0 10px;
  }

  #skills h1 {
    font-size: 5vw;
  }

  #projects {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #projects h1 {
    font-size: 5vw;
  }
  .projects__project-cards {
    display: flex;
    justify-content: space-around;
    width: 100%;
  }

  #contact h1 {
    font-size: 5vw;
  }
  #contact form input {
    width: 80vw;
  }
  #contact form {
    width: 80vw;
    display: flex;
    flex-direction: column;
  }

  #contact form textarea {
    width: 80vw;
  }

  #contact form button {
    margin: 0 auto;
  }
  footer {
    padding-left: 0px;
    transform: none;
  }
  body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-self: space-between;
    margin: 0;
    padding: 0 5vw;
  }
}

@media screen and (max-width: 500px) {
  .projects__project-cards {
    flex-direction: column;
    align-items: center;
  }

  #projects button {
    margin: 10px;
  }

  .about__cta {
    flex-direction: column;
  }

  .about__cta button {
    margin: 10px;
  }

  .footer__content p {
    width: 350px;
  }
}

